--- a/portfolio_website/index.html
+++ b/portfolio_website/index.html
@@ -39,8 +39,8 @@
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Let's Talk</a></li>
             </ul>
-            <button><span class="material-icons-sharp">menu</span></button>
-            <button><span class="material-icons-sharp">close</span></button>
+            <button><span class="material-icons-sharp" id="menu-btn">menu</span></button>
+            <button><span class="material-icons-sharp" id="close-btn">close</span></button>
         </div>
     </nav>
     <!-- END OF NAVBAR -->
@@ -538,5 +538,4 @@
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="./main.js"></script>
 </body>
-
 </html>
